[metadata]
# replace with your username:
name = xnat-links-joamonse
version = 0.5
author = joamonse
author_email = author@example.com
description = A simple module to get links to xnat rest api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joamonse/xnat_links.git
project_urls =
    Bug Tracker = https://github.com/joamonse/xnat_links.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.6